--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "elasticsearch": "^16.7.2",
+    "emailjs": "^3.4.0",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "fs": "0.0.1-security",
